{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 653,
  "lineage": "08389829-b10b-fd24-c09b-c2177adc6091",
  "resources": [
    {
      "mode": "data",
      "type": "aws_ec2_transit_gateway_peering_attachment",
      "name": "attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "Tokyo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "liberdade_tgw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:sa-east-1:329327479095:transit-gateway/tgw-0a4ca5fa20ef7561c",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "disable",
            "default_route_table_propagation": "disable",
            "description": "liberdade-tgw01 (Sao Paulo spoke)",
            "dns_support": "enable",
            "encryption_support": "disable",
            "id": "tgw-0a4ca5fa20ef7561c",
            "multicast_support": "disable",
            "owner_id": "329327479095",
            "region": "sa-east-1",
            "security_group_referencing_support": "disable",
            "tags": {
              "Name": "liberdade-tgw01"
            },
            "tags_all": {
              "Name": "liberdade-tgw01"
            },
            "vpn_ecmp_support": "enable"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_peering_attachment_accepter",
      "name": "liberdade_accept_peer01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo"
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "to_region_b_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "to_region_b_vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:329327479095:transit-gateway-route-table/tgw-rtb-012db163c457a96f8",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-012db163c457a96f8",
            "region": "sa-east-1",
            "tags": {
              "Name": "tgw-rt-b"
            },
            "tags_all": {
              "Name": "tgw-rt-b"
            },
            "transit_gateway_id": "tgw-0a4ca5fa20ef7561c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.liberdade_tgw01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "vpc_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-012db163c457a96f8_tgw-attach-0007831e361c210b0",
            "region": "sa-east-1",
            "replace_existing_association": false,
            "resource_id": "vpc-0c4fe5adffb914b12",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0007831e361c210b0",
            "transit_gateway_route_table_id": "tgw-rtb-012db163c457a96f8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.liberdade_tgw01",
            "aws_ec2_transit_gateway_route_table.rt_a",
            "aws_ec2_transit_gateway_vpc_attachment.liberdade_attach_sp_vpc01",
            "aws_subnet.Star_Private_AZ1",
            "aws_subnet.Star_Private_AZ2",
            "aws_vpc.Star",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "vpc_assoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "vpc_prop",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-012db163c457a96f8_tgw-attach-0007831e361c210b0",
            "region": "sa-east-1",
            "resource_id": "vpc-0c4fe5adffb914b12",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0007831e361c210b0",
            "transit_gateway_route_table_id": "tgw-rtb-012db163c457a96f8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.liberdade_tgw01",
            "aws_ec2_transit_gateway_route_table.rt_a",
            "aws_ec2_transit_gateway_vpc_attachment.liberdade_attach_sp_vpc01",
            "aws_subnet.Star_Private_AZ1",
            "aws_subnet.Star_Private_AZ2",
            "aws_vpc.Star",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "liberdade_attach_sp_vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "enable",
            "arn": "arn:aws:ec2:sa-east-1:329327479095:transit-gateway-attachment/tgw-attach-0007831e361c210b0",
            "dns_support": "enable",
            "id": "tgw-attach-0007831e361c210b0",
            "ipv6_support": "disable",
            "region": "sa-east-1",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-033dc43cc6a544000",
              "subnet-0e35a805660b28407"
            ],
            "tags": {
              "Name": "liberdade-attach-sp-vpc01"
            },
            "tags_all": {
              "Name": "liberdade-attach-sp-vpc01"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-0a4ca5fa20ef7561c",
            "vpc_id": "vpc-0c4fe5adffb914b12",
            "vpc_owner_id": "329327479095"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.liberdade_tgw01",
            "aws_subnet.Star_Private_AZ1",
            "aws_subnet.Star_Private_AZ2",
            "aws_vpc.Star",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "lab-ec2-app-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c78dc042da77017f",
            "arn": "arn:aws:ec2:sa-east-1:329327479095:instance/i-0d9b29ab676eb7cef",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2-ssm",
            "id": "i-0d9b29ab676eb7cef",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0717e7de8eb58ce45"
              }
            ],
            "primary_network_interface_id": "eni-0717e7de8eb58ce45",
            "private_dns": "ip-10-200-1-250.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.200.1.250",
            "public_dns": "ec2-18-228-42-81.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.228.42.81",
            "region": "sa-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d23485e6d503cd46",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0eb024dd1c8072b94"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04d89754bf4c5d01c",
            "tags": {
              "Name": "lab-ec2-app"
            },
            "tags_all": {
              "Name": "lab-ec2-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eb024dd1c8072b94"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "329327479095",
            "id": "i-0d9b29ab676eb7cef",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.second",
            "aws_iam_role.EC2_Role2",
            "aws_security_group.EC2_SG",
            "aws_subnet.Star_Public_AZ1",
            "aws_vpc.Star",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:329327479095:internet-gateway/igw-07dfd0856b8dfabe1",
            "id": "igw-07dfd0856b8dfabe1",
            "owner_id": "329327479095",
            "region": "sa-east-1",
            "tags": {
              "Name": "Star_IGW"
            },
            "tags_all": {
              "Name": "Star_IGW"
            },
            "vpc_id": "vpc-0c4fe5adffb914b12"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Star"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "hidden_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "aws-alb-logs-sa-east-1-star1-329327479095",
                "enabled": true,
                "prefix": "alb"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:329327479095:loadbalancer/app/LoadExternal/a8a436bf1a3f1485",
            "arn_suffix": "app/LoadExternal/a8a436bf1a3f1485",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "LoadExternal-1719787974.sa-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:329327479095:loadbalancer/app/LoadExternal/a8a436bf1a3f1485",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "LoadExternal",
            "preserve_host_header": false,
            "region": "sa-east-1",
            "security_groups": [
              "sg-0674e69c8a590de9d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04d89754bf4c5d01c"
              },
              {
                "subnet_id": "subnet-069165f193a8d36b9"
              }
            ],
            "subnets": [
              "subnet-04d89754bf4c5d01c",
              "subnet-069165f193a8d36b9"
            ],
            "tags": {
              "Name": "App1LoadBalancer"
            },
            "tags_all": {
              "Name": "App1LoadBalancer"
            },
            "vpc_id": "vpc-0c4fe5adffb914b12",
            "xff_header_processing_mode": "append",
            "zone_id": "Z2P70J7HTTTPLU"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:329327479095:loadbalancer/app/LoadExternal/a8a436bf1a3f1485"
          },
          "dependencies": [
            "aws_s3_bucket.spire",
            "aws_security_group.ALB",
            "aws_subnet.Star_Public_AZ1",
            "aws_subnet.Star_Public_AZ2",
            "aws_vpc.Star",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:329327479095:listener/app/LoadExternal/a8a436bf1a3f1485/e8364d87453d6ecf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:329327479095:listener/app/LoadExternal/a8a436bf1a3f1485/e8364d87453d6ecf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:sa-east-1:329327479095:loadbalancer/app/LoadExternal/a8a436bf1a3f1485",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "sa-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:329327479095:listener/app/LoadExternal/a8a436bf1a3f1485/e8364d87453d6ecf"
          },
          "dependencies": [
            "aws_lb.hidden_alb",
            "aws_s3_bucket.spire",
            "aws_security_group.ALB",
            "aws_subnet.Star_Public_AZ1",
            "aws_subnet.Star_Public_AZ2",
            "aws_vpc.Star",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:329327479095:listener/app/LoadExternal/a8a436bf1a3f1485/5c763a37ea0c34bd",
            "certificate_arn": "arn:aws:acm:sa-east-1:329327479095:certificate/26f36087-11bd-40ca-a26e-99e45446c01c",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:sa-east-1:329327479095:targetgroup/hidden-target-group/458cefc8aa06ad2a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:329327479095:listener/app/LoadExternal/a8a436bf1a3f1485/5c763a37ea0c34bd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:sa-east-1:329327479095:loadbalancer/app/LoadExternal/a8a436bf1a3f1485",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "sa-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:329327479095:listener/app/LoadExternal/a8a436bf1a3f1485/5c763a37ea0c34bd"
          },
          "dependencies": [
            "aws_acm_certificate.hidden_target_group2",
            "aws_lb.hidden_alb",
            "aws_lb_target_group.hidden_target_group",
            "aws_s3_bucket.spire",
            "aws_security_group.ALB",
            "aws_subnet.Star_Public_AZ1",
            "aws_subnet.Star_Public_AZ2",
            "aws_vpc.Star",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "block_direct_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Forbidden - Direct access not allowed",
                    "status_code": "403"
                  }
                ],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:329327479095:listener-rule/app/LoadExternal/a8a436bf1a3f1485/5c763a37ea0c34bd/4b48689b80b3dd7d",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:329327479095:listener-rule/app/LoadExternal/a8a436bf1a3f1485/5c763a37ea0c34bd/4b48689b80b3dd7d",
            "listener_arn": "arn:aws:elasticloadbalancing:sa-east-1:329327479095:listener/app/LoadExternal/a8a436bf1a3f1485/5c763a37ea0c34bd",
            "priority": 99,
            "region": "sa-east-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:329327479095:listener-rule/app/LoadExternal/a8a436bf1a3f1485/5c763a37ea0c34bd/4b48689b80b3dd7d"
          },
          "dependencies": [
            "aws_acm_certificate.hidden_target_group2",
            "aws_lb.hidden_alb",
            "aws_lb_listener.https",
            "aws_lb_target_group.hidden_target_group",
            "aws_s3_bucket.spire",
            "aws_security_group.ALB",
            "aws_subnet.Star_Public_AZ1",
            "aws_subnet.Star_Public_AZ2",
            "aws_vpc.Star",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "require_origin_header",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:sa-east-1:329327479095:targetgroup/hidden-target-group/458cefc8aa06ad2a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:329327479095:listener-rule/app/LoadExternal/a8a436bf1a3f1485/5c763a37ea0c34bd/ed79b8387569794e",
            "condition": [
              {
                "host_header": [],
                "http_header": [
                  {
                    "http_header_name": "X-Origin-Verify",
                    "regex_values": [],
                    "values": [
                      "aMDvr8G00AxaOL0aqokUpJjsGZPdYfFb"
                    ]
                  }
                ],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:329327479095:listener-rule/app/LoadExternal/a8a436bf1a3f1485/5c763a37ea0c34bd/ed79b8387569794e",
            "listener_arn": "arn:aws:elasticloadbalancing:sa-east-1:329327479095:listener/app/LoadExternal/a8a436bf1a3f1485/5c763a37ea0c34bd",
            "priority": 10,
            "region": "sa-east-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "condition"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:329327479095:listener-rule/app/LoadExternal/a8a436bf1a3f1485/5c763a37ea0c34bd/ed79b8387569794e"
          },
          "dependencies": [
            "aws_acm_certificate.hidden_target_group2",
            "aws_lb.hidden_alb",
            "aws_lb_listener.https",
            "aws_lb_target_group.hidden_target_group",
            "aws_s3_bucket.spire",
            "aws_security_group.ALB",
            "aws_subnet.Star_Public_AZ1",
            "aws_subnet.Star_Public_AZ2",
            "aws_vpc.Star",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "data.aws_region.current",
            "random_password.origin_header_secret"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "hidden_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:329327479095:targetgroup/hidden-target-group/458cefc8aa06ad2a",
            "arn_suffix": "targetgroup/hidden-target-group/458cefc8aa06ad2a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:329327479095:targetgroup/hidden-target-group/458cefc8aa06ad2a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:sa-east-1:329327479095:loadbalancer/app/LoadExternal/a8a436bf1a3f1485"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "hidden-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "sa-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Target Group for hidden target_group"
            },
            "tags_all": {
              "Name": "Target Group for hidden target_group"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c4fe5adffb914b12"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:329327479095:targetgroup/hidden-target-group/458cefc8aa06ad2a"
          },
          "dependencies": [
            "aws_vpc.Star"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "liberdade_to_tokyo_route01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:329327479095:route-table/rtb-03371ae820d0f319e",
            "id": "rtb-03371ae820d0f319e",
            "owner_id": "329327479095",
            "propagating_vgws": [],
            "region": "sa-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.200.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private_Route"
            },
            "tags_all": {
              "Name": "Private_Route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4fe5adffb914b12"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "329327479095",
            "id": "rtb-03371ae820d0f319e",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.Star"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:329327479095:route-table/rtb-01b48a3c71b618275",
            "id": "rtb-01b48a3c71b618275",
            "owner_id": "329327479095",
            "propagating_vgws": [],
            "region": "sa-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07dfd0856b8dfabe1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_Route"
            },
            "tags_all": {
              "Name": "Public_Route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4fe5adffb914b12"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "329327479095",
            "id": "rtb-01b48a3c71b618275",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.internet",
            "aws_vpc.Star"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Known",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dos",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0452108e6399fa87e",
            "region": "sa-east-1",
            "route_table_id": "rtb-01b48a3c71b618275",
            "subnet_id": "subnet-069165f193a8d36b9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.internet",
            "aws_route_table.Public",
            "aws_subnet.Star_Public_AZ1",
            "aws_subnet.Star_Public_AZ2",
            "aws_vpc.Star",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "uno",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080c2d878e2ef9f9d",
            "region": "sa-east-1",
            "route_table_id": "rtb-01b48a3c71b618275",
            "subnet_id": "subnet-04d89754bf4c5d01c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.internet",
            "aws_route_table.Public",
            "aws_subnet.Star_Public_AZ1",
            "aws_subnet.Star_Public_AZ2",
            "aws_vpc.Star",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Secret",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dos",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001e31d8e4df46ba6",
            "region": "sa-east-1",
            "route_table_id": "rtb-03371ae820d0f319e",
            "subnet_id": "subnet-033dc43cc6a544000"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.Private",
            "aws_subnet.Star_Private_AZ1",
            "aws_subnet.Star_Private_AZ2",
            "aws_vpc.Star",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "uno",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e14017215113b6ad",
            "region": "sa-east-1",
            "route_table_id": "rtb-03371ae820d0f319e",
            "subnet_id": "subnet-0e35a805660b28407"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.Private",
            "aws_subnet.Star_Private_AZ1",
            "aws_subnet.Star_Private_AZ2",
            "aws_vpc.Star",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:329327479095:security-group/sg-0674e69c8a590de9d",
            "description": "Allow TLS inbound traffic on HTTPS all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0674e69c8a590de9d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTPS from CloudFront only",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-5da64334"
                ],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ALB",
            "name_prefix": "",
            "owner_id": "329327479095",
            "region": "sa-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EC2_SG"
            },
            "tags_all": {
              "Name": "EC2_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4fe5adffb914b12"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "329327479095",
            "id": "sg-0674e69c8a590de9d",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.Star"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "EC2_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:329327479095:security-group/sg-0eb024dd1c8072b94",
            "description": "Allow TLS inbound traffic on HTTP and RDP and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb024dd1c8072b94",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "EC2_SG",
            "name_prefix": "",
            "owner_id": "329327479095",
            "region": "sa-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EC2_SG"
            },
            "tags_all": {
              "Name": "EC2_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4fe5adffb914b12"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "329327479095",
            "id": "sg-0eb024dd1c8072b94",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.Star"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Endpoint_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:329327479095:security-group/sg-0af3855e34178860f",
            "description": "Endpoints traffic from 80,443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af3855e34178860f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Endpoint_SG",
            "name_prefix": "",
            "owner_id": "329327479095",
            "region": "sa-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Endpoint_SG"
            },
            "tags_all": {
              "Name": "Endpoint_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4fe5adffb914b12"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "329327479095",
            "id": "sg-0af3855e34178860f",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.Star"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Star_Private_AZ1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:329327479095:subnet/subnet-0e35a805660b28407",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.200.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e35a805660b28407",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "329327479095",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "sa-east-1",
            "tags": {
              "Name": "Star_Private_AZ1"
            },
            "tags_all": {
              "Name": "Star_Private_AZ1"
            },
            "vpc_id": "vpc-0c4fe5adffb914b12"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "329327479095",
            "id": "subnet-0e35a805660b28407",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.Star",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Star_Private_AZ2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:329327479095:subnet/subnet-033dc43cc6a544000",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.200.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033dc43cc6a544000",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "329327479095",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "sa-east-1",
            "tags": {
              "Name": "Star_Private_AZ2"
            },
            "tags_all": {
              "Name": "Star_Private_AZ2"
            },
            "vpc_id": "vpc-0c4fe5adffb914b12"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "329327479095",
            "id": "subnet-033dc43cc6a544000",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.Star",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Star_Public_AZ1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:329327479095:subnet/subnet-04d89754bf4c5d01c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.200.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d89754bf4c5d01c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "329327479095",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "sa-east-1",
            "tags": {
              "Name": "Star_Public_AZ1"
            },
            "tags_all": {
              "Name": "Star_Public_AZ1"
            },
            "vpc_id": "vpc-0c4fe5adffb914b12"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "329327479095",
            "id": "subnet-04d89754bf4c5d01c",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.Star",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Star_Public_AZ2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:329327479095:subnet/subnet-069165f193a8d36b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.200.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069165f193a8d36b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "329327479095",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "sa-east-1",
            "tags": {
              "Name": "Star_Public_AZ2"
            },
            "tags_all": {
              "Name": "Star_Public_AZ2"
            },
            "vpc_id": "vpc-0c4fe5adffb914b12"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "329327479095",
            "id": "subnet-069165f193a8d36b9",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.Star",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Star",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:329327479095:vpc/vpc-0c4fe5adffb914b12",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.200.0.0/16",
            "default_network_acl_id": "acl-0391fb4092de3a375",
            "default_route_table_id": "rtb-0202e2e9a7ace30e6",
            "default_security_group_id": "sg-03b4a1dcfd77af5f7",
            "dhcp_options_id": "dopt-05dd911f840ab899d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c4fe5adffb914b12",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0202e2e9a7ace30e6",
            "owner_id": "329327479095",
            "region": "sa-east-1",
            "tags": {
              "Name": "star1"
            },
            "tags_all": {
              "Name": "star1"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "329327479095",
            "id": "vpc-0c4fe5adffb914b12",
            "region": "sa-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:329327479095:vpc-endpoint/vpce-0fc95f21fcb240159",
            "dns_entry": [
              {
                "dns_name": "vpce-0fc95f21fcb240159-4bx2smn1.ec2messages.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-0fc95f21fcb240159-4bx2smn1-sa-east-1a.ec2messages.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-0fc95f21fcb240159-4bx2smn1-sa-east-1b.ec2messages.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "ec2messages.sa-east-1.amazonaws.com",
                "hosted_zone_id": "Z03331672YYM00YGIUL0X"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0fc95f21fcb240159",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0e571a15a957d9287",
              "eni-0ef73968193bf3392"
            ],
            "owner_id": "329327479095",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "sa-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0af3855e34178860f"
            ],
            "service_name": "com.amazonaws.sa-east-1.ec2messages",
            "service_region": "sa-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.200.11.207",
                "subnet_id": "subnet-0e35a805660b28407"
              },
              {
                "ipv4": "10.200.12.165",
                "subnet_id": "subnet-033dc43cc6a544000"
              }
            ],
            "subnet_ids": [
              "subnet-033dc43cc6a544000",
              "subnet-0e35a805660b28407"
            ],
            "tags": {
              "Name": "EC2Messages VPC Endpoint"
            },
            "tags_all": {
              "Name": "EC2Messages VPC Endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c4fe5adffb914b12"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "329327479095",
            "id": "vpce-0fc95f21fcb240159",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.Endpoint_SG",
            "aws_subnet.Star_Private_AZ1",
            "aws_subnet.Star_Private_AZ2",
            "aws_vpc.Star",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:329327479095:vpc-endpoint/vpce-0cce13f7dd543678d",
            "dns_entry": [
              {
                "dns_name": "vpce-0cce13f7dd543678d-5sgfpa7i.logs.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-0cce13f7dd543678d-5sgfpa7i-sa-east-1b.logs.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-0cce13f7dd543678d-5sgfpa7i-sa-east-1a.logs.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "logs.sa-east-1.amazonaws.com",
                "hosted_zone_id": "Z0332170322V1FPXUWVRQ"
              },
              {
                "dns_name": "streaming-logs.sa-east-1.amazonaws.com",
                "hosted_zone_id": "Z04059103MBIYNENDXWAA"
              },
              {
                "dns_name": "logs.sa-east-1.api.aws",
                "hosted_zone_id": "Z02140743HY3TKL25DYTO"
              },
              {
                "dns_name": "streaming-logs.sa-east-1.api.aws",
                "hosted_zone_id": "Z0407415KPILMPZEHK97"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0cce13f7dd543678d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-046e6083bfbce6f85",
              "eni-0f0a13ef913b8c2ee"
            ],
            "owner_id": "329327479095",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "sa-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0af3855e34178860f"
            ],
            "service_name": "com.amazonaws.sa-east-1.logs",
            "service_region": "sa-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.200.11.213",
                "subnet_id": "subnet-0e35a805660b28407"
              },
              {
                "ipv4": "10.200.12.35",
                "subnet_id": "subnet-033dc43cc6a544000"
              }
            ],
            "subnet_ids": [
              "subnet-033dc43cc6a544000",
              "subnet-0e35a805660b28407"
            ],
            "tags": {
              "Name": "deathless-god-endpoint-cloudwatch-logs"
            },
            "tags_all": {
              "Name": "deathless-god-endpoint-cloudwatch-logs"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c4fe5adffb914b12"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "329327479095",
            "id": "vpce-0cce13f7dd543678d",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.Endpoint_SG",
            "aws_subnet.Star_Private_AZ1",
            "aws_subnet.Star_Private_AZ2",
            "aws_vpc.Star",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_gateway_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:329327479095:vpc-endpoint/vpce-018c0fc8c70620e53",
            "cidr_blocks": [
              "16.12.2.0/24",
              "3.5.232.0/22",
              "16.12.0.0/23",
              "52.95.163.0/24",
              "52.95.164.0/23"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-018c0fc8c70620e53",
            "ip_address_type": "ipv4",
            "owner_id": "329327479095",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6aa54003",
            "private_dns_enabled": false,
            "region": "sa-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-03371ae820d0f319e"
            ],
            "service_name": "com.amazonaws.sa-east-1.s3",
            "service_region": "sa-east-1",
            "state": "available",
            "tags": {
              "Name": "S3-Gateway-Endpoint"
            },
            "tags_all": {
              "Name": "S3-Gateway-Endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0c4fe5adffb914b12"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "329327479095",
            "id": "vpce-018c0fc8c70620e53",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_route_table.Private",
            "aws_vpc.Star",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secrets_manager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:329327479095:vpc-endpoint/vpce-06836a293f653d5d4",
            "dns_entry": [
              {
                "dns_name": "vpce-06836a293f653d5d4-7uh4qe3h.secretsmanager.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-06836a293f653d5d4-7uh4qe3h-sa-east-1b.secretsmanager.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-06836a293f653d5d4-7uh4qe3h-sa-east-1a.secretsmanager.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "secretsmanager.sa-east-1.amazonaws.com",
                "hosted_zone_id": "Z06283523UFURQOBD5DJZ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06836a293f653d5d4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05d25b6d3ef27dc09",
              "eni-0cbc9ec3a9cff191b"
            ],
            "owner_id": "329327479095",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "sa-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0af3855e34178860f"
            ],
            "service_name": "com.amazonaws.sa-east-1.secretsmanager",
            "service_region": "sa-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.200.11.235",
                "subnet_id": "subnet-0e35a805660b28407"
              },
              {
                "ipv4": "10.200.12.158",
                "subnet_id": "subnet-033dc43cc6a544000"
              }
            ],
            "subnet_ids": [
              "subnet-033dc43cc6a544000",
              "subnet-0e35a805660b28407"
            ],
            "tags": {
              "Name": "SecretsManagerVPCEndpoint"
            },
            "tags_all": {
              "Name": "SecretsManagerVPCEndpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c4fe5adffb914b12"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "329327479095",
            "id": "vpce-06836a293f653d5d4",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.Endpoint_SG",
            "aws_subnet.Star_Private_AZ1",
            "aws_subnet.Star_Private_AZ2",
            "aws_vpc.Star",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:329327479095:vpc-endpoint/vpce-05b55802b798318e1",
            "dns_entry": [
              {
                "dns_name": "vpce-05b55802b798318e1-7ddw0fdx.ssm.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-05b55802b798318e1-7ddw0fdx-sa-east-1a.ssm.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-05b55802b798318e1-7ddw0fdx-sa-east-1b.ssm.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "ssm.sa-east-1.amazonaws.com",
                "hosted_zone_id": "Z02155684QX94Q4T1M24"
              },
              {
                "dns_name": "ssm-facade.sa-east-1.amazonaws.com",
                "hosted_zone_id": "Z040748226VUJZZ9UNX6L"
              },
              {
                "dns_name": "ssm.sa-east-1.api.aws",
                "hosted_zone_id": "Z0215787TNW3ODQDOMKK"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05b55802b798318e1",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0151e955181ffe9cd",
              "eni-0a7a7946c619be8f8"
            ],
            "owner_id": "329327479095",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "sa-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0af3855e34178860f"
            ],
            "service_name": "com.amazonaws.sa-east-1.ssm",
            "service_region": "sa-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.200.11.114",
                "subnet_id": "subnet-0e35a805660b28407"
              },
              {
                "ipv4": "10.200.12.154",
                "subnet_id": "subnet-033dc43cc6a544000"
              }
            ],
            "subnet_ids": [
              "subnet-033dc43cc6a544000",
              "subnet-0e35a805660b28407"
            ],
            "tags": {
              "Name": "ssm-endpoint"
            },
            "tags_all": {
              "Name": "ssm-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c4fe5adffb914b12"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "329327479095",
            "id": "vpce-05b55802b798318e1",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.Endpoint_SG",
            "aws_subnet.Star_Private_AZ1",
            "aws_subnet.Star_Private_AZ2",
            "aws_vpc.Star",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:329327479095:vpc-endpoint/vpce-080ef5f48d0f8268a",
            "dns_entry": [
              {
                "dns_name": "vpce-080ef5f48d0f8268a-wnehechp.ssmmessages.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-080ef5f48d0f8268a-wnehechp-sa-east-1b.ssmmessages.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-080ef5f48d0f8268a-wnehechp-sa-east-1a.ssmmessages.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "ssmmessages.sa-east-1.amazonaws.com",
                "hosted_zone_id": "Z0628529FMYFUQB0BCIJ"
              },
              {
                "dns_name": "ssmmessages.sa-east-1.api.aws",
                "hosted_zone_id": "Z04069521W8F13ON21K2Z"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-080ef5f48d0f8268a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-011a6f569eaba7032",
              "eni-0c2da647d8ce71367"
            ],
            "owner_id": "329327479095",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "sa-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0af3855e34178860f"
            ],
            "service_name": "com.amazonaws.sa-east-1.ssmmessages",
            "service_region": "sa-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.200.11.92",
                "subnet_id": "subnet-0e35a805660b28407"
              },
              {
                "ipv4": "10.200.12.228",
                "subnet_id": "subnet-033dc43cc6a544000"
              }
            ],
            "subnet_ids": [
              "subnet-033dc43cc6a544000",
              "subnet-0e35a805660b28407"
            ],
            "tags": {
              "Name": "ssmmessages-endpoint"
            },
            "tags_all": {
              "Name": "ssmmessages-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c4fe5adffb914b12"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "329327479095",
            "id": "vpce-080ef5f48d0f8268a",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.Endpoint_SG",
            "aws_subnet.Star_Private_AZ1",
            "aws_subnet.Star_Private_AZ2",
            "aws_vpc.Star",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:329327479095:vpc-endpoint/vpce-0c0637163a037b381",
            "dns_entry": [
              {
                "dns_name": "vpce-0c0637163a037b381-bwh5rgdm.sts.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-0c0637163a037b381-bwh5rgdm-sa-east-1a.sts.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-0c0637163a037b381-bwh5rgdm-sa-east-1b.sts.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "sts.sa-east-1.amazonaws.com",
                "hosted_zone_id": "Z03321693HC33CCSB7NJO"
              },
              {
                "dns_name": "sts.sa-east-1.api.aws",
                "hosted_zone_id": "Z04059053Q2OPLADRHHTA"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c0637163a037b381",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01771ec46ae79ae2a",
              "eni-018fb2fb64f94628e"
            ],
            "owner_id": "329327479095",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "sa-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0af3855e34178860f"
            ],
            "service_name": "com.amazonaws.sa-east-1.sts",
            "service_region": "sa-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.200.11.101",
                "subnet_id": "subnet-0e35a805660b28407"
              },
              {
                "ipv4": "10.200.12.124",
                "subnet_id": "subnet-033dc43cc6a544000"
              }
            ],
            "subnet_ids": [
              "subnet-033dc43cc6a544000",
              "subnet-0e35a805660b28407"
            ],
            "tags": {
              "Name": "STSVPCEndpoint"
            },
            "tags_all": {
              "Name": "STSVPCEndpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c4fe5adffb914b12"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "329327479095",
            "id": "vpce-0c0637163a037b381",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.Endpoint_SG",
            "aws_subnet.Star_Private_AZ1",
            "aws_subnet.Star_Private_AZ2",
            "aws_vpc.Star",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_egress_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dos",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:329327479095:security-group-rule/sgr-01d9f0e17d68ee703",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-01d9f0e17d68ee703",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "sa-east-1",
            "security_group_id": "sg-0af3855e34178860f",
            "security_group_rule_id": "sgr-01d9f0e17d68ee703",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "329327479095",
            "id": "sgr-01d9f0e17d68ee703",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.ALB",
            "aws_security_group.EC2_SG",
            "aws_security_group.Endpoint_SG",
            "aws_vpc.Star"
          ]
        },
        {
          "index_key": "tre",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:329327479095:security-group-rule/sgr-0debc97470489307a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0debc97470489307a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "sa-east-1",
            "security_group_id": "sg-0674e69c8a590de9d",
            "security_group_rule_id": "sgr-0debc97470489307a",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "329327479095",
            "id": "sgr-0debc97470489307a",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.ALB",
            "aws_security_group.EC2_SG",
            "aws_security_group.Endpoint_SG",
            "aws_vpc.Star"
          ]
        },
        {
          "index_key": "uno",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:329327479095:security-group-rule/sgr-0e0684bf933b57954",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0e0684bf933b57954",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "sa-east-1",
            "security_group_id": "sg-0eb024dd1c8072b94",
            "security_group_rule_id": "sgr-0e0684bf933b57954",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "329327479095",
            "id": "sgr-0e0684bf933b57954",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.ALB",
            "aws_security_group.EC2_SG",
            "aws_security_group.Endpoint_SG",
            "aws_vpc.Star"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_from_cloudfront_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:329327479095:security-group-rule/sgr-05ec323abf0b4cf15",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow HTTPS from CloudFront only",
            "from_port": 443,
            "id": "sgr-05ec323abf0b4cf15",
            "ip_protocol": "tcp",
            "prefix_list_id": "pl-5da64334",
            "referenced_security_group_id": null,
            "region": "sa-east-1",
            "security_group_id": "sg-0674e69c8a590de9d",
            "security_group_rule_id": "sgr-05ec323abf0b4cf15",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "329327479095",
            "id": "sgr-05ec323abf0b4cf15",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.ALB",
            "aws_vpc.Star",
            "data.aws_ec2_managed_prefix_list.cloudfront_origin_facing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dos",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:329327479095:security-group-rule/sgr-060d145930f7d45cc",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-060d145930f7d45cc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "sa-east-1",
            "security_group_id": "sg-0af3855e34178860f",
            "security_group_rule_id": "sgr-060d145930f7d45cc",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "329327479095",
            "id": "sgr-060d145930f7d45cc",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.EC2_SG",
            "aws_security_group.Endpoint_SG",
            "aws_vpc.Star"
          ]
        },
        {
          "index_key": "uno",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:329327479095:security-group-rule/sgr-0f4004a5834a42d46",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0f4004a5834a42d46",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "sa-east-1",
            "security_group_id": "sg-0eb024dd1c8072b94",
            "security_group_rule_id": "sgr-0f4004a5834a42d46",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "329327479095",
            "id": "sgr-0f4004a5834a42d46",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.EC2_SG",
            "aws_security_group.Endpoint_SG",
            "aws_vpc.Star"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_https_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dos",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:329327479095:security-group-rule/sgr-0cc886d3fffdae537",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0cc886d3fffdae537",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "sa-east-1",
            "security_group_id": "sg-0af3855e34178860f",
            "security_group_rule_id": "sgr-0cc886d3fffdae537",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "329327479095",
            "id": "sgr-0cc886d3fffdae537",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.EC2_SG",
            "aws_security_group.Endpoint_SG",
            "aws_vpc.Star"
          ]
        },
        {
          "index_key": "uno",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:329327479095:security-group-rule/sgr-06cc3583ba546795a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-06cc3583ba546795a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "sa-east-1",
            "security_group_id": "sg-0eb024dd1c8072b94",
            "security_group_rule_id": "sgr-06cc3583ba546795a",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "329327479095",
            "id": "sgr-06cc3583ba546795a",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.EC2_SG",
            "aws_security_group.Endpoint_SG",
            "aws_vpc.Star"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_mysql_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "uno",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:329327479095:security-group-rule/sgr-09172c4cd1aeaad82",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-09172c4cd1aeaad82",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "sa-east-1",
            "security_group_id": "sg-0eb024dd1c8072b94",
            "security_group_rule_id": "sgr-09172c4cd1aeaad82",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "329327479095",
            "id": "sgr-09172c4cd1aeaad82",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.EC2_SG",
            "aws_vpc.Star"
          ]
        }
      ]
    }
  ]
}